# evolution-client-py-sdk

./: .gitignore  .releaserc.json  CHANGELOG.md  LICENSE  README.md  makefile  package-lock.json  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  python-package.yml.old  release.yml  release.yml_old  sdk-ci.yml  test-sdk.yml  test-sdk.yml_old
docs/: update_sdk.md
evolution_client/: __init__.py  async_client.py  async_service.py  client.py  exceptions.py  service.py  utils.py  webhook.py  webhook_handler.py
evolution_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
evolution_client/models/: __init__.py  group.py  instance.py  messages.py  responses.py  webhooks.py
scripts/: update_pyproject_version.py
tests/: test_async_client.py  test_client.py  test_group_chat.py  test_instance_management.py  test_mime_detection.py  test_models.py  test_new_messages.py  test_profile.py  test_webhook_resilience.py  test_webhooks.py
tests/fixtures/: incomplete_message_data.json  malformed_random.json  missing_from_field.json  null_required_fields.json  unknown_event.json  valid_message_upsert.json
