
[project]
name = "evolution-client"
version = "1.0.2"
description = "Python client and webhook handler for Evolution WhatsApp Evolution API"
authors = [{name = "Jonas Da Silva"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/yourname/evolution-client"
Documentation = "https://doc.evolution-api.com/"
Issues = "https://github.com/yourname/evolution-client/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "tomlkit (>=0.13.3,<0.14.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "respx (>=0.22.0,<0.23.0)"
]
